# power-master

./: .dockerignore  .gitignore  DEPLOY_PI.md  DEPLOY_SYNOLOGY.md  Dockerfile  README.md  config.defaults.yaml  config.site-a-four4free.example.yaml  config.site-b-zerohero.example.yaml  docker-compose.pi.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  ci.yml  promote-stable.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
deploy/: build-pi-image.sh  pi-setup.sh
scripts/: add_forecast_price_variance.py  build_test_dataset.py  run_optimiser_lab.py  run_testdata_import_from_config.py
src/: main.py
src/power_master/: __init__.py  __main__.py  main.py  settings.py  timezone_utils.py  updater.py
tests/: conftest.py  test_config.py  test_db.py  test_ev_charger_learner.py  test_main.py
tests/test_accounting/: test_accounting.py  test_daily_credit_tracker.py  test_export_tier_ledger.py  test_free_window_cap.py  test_ledger_wiring.py  test_provider_cutover.py
tests/test_control/: test_control.py  test_mode_schedule.py
tests/test_dashboard/: test_auth.py  test_dashboard.py  test_ev_overview.py  test_optimiser_lab.py  test_plan_formatting.py  test_tariff.py  test_tou_overview.py
tests/test_forecast/: test_forecast.py  test_forecast_solar_provider.py  test_persistence.py  test_solar_calibration.py
tests/test_hardware/: test_foxess.py
tests/test_history/: test_history.py
tests/test_integration/: test_scenarios.py
(+135 files in other folders)
